# Agora-Flutter-RTM-SDK

./: .gitignore  .metadata  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pubspec.yaml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: build.yml  ci.yml  on_issue_labeled.yml  on_pr_closed.yml  on_pr_external.yml  on_pr_internal.yml  publish.yml  release.yml  run_build_example.yml  run_gen_code.yml  run_pub.yml  run_test.yml  schedule-run-ci-external.yml  schedule-run-ci-internal.yml
android/: .gitignore  .project  build.gradle  settings.gradle
example/: README.md  pubspec.yaml
example/android/: settings.gradle
example/ios/: Podfile  export.plist
example/lib/: main.dart
example/test/: widget_test.dart
ios/: agora_rtm.podspec
ios/Classes/: AgoraRtmPlugin.h  AgoraRtmPlugin.m  AgoraRtmPlugin.mm  Extensions.swift  RTMCallManager.swift  RTMChannel.h  RTMChannel.m  RTMChannel.swift  RTMClient.h  RTMClient.m  RTMClient.swift  SwiftAgoraRtmPlugin.swift  dart_api_dl.c
lib/: agora_rtm.dart
lib/src/: agora_rtm_base.dart  agora_rtm_base.g.dart  agora_rtm_call_manager.dart  agora_rtm_channel.dart  agora_rtm_client.dart  agora_rtm_client.g.dart  agora_rtm_client_ext.dart  agora_rtm_history.dart  agora_rtm_lock.dart  agora_rtm_plugin.dart  utils.dart  (+7 more)
scripts/: artifacts_version.sh  build-iris.sh  code_gen.sh  download_unzip_iris_cdn_artifacts.sh  flutter-build-runner.sh  run_flutter_integration_test.sh
src/: CMakeLists.txt  iris_event.cc  iris_event.h  iris_life_cycle_observer.cc  iris_life_cycle_observer.h  iris_life_cycle_observer.mm
(+149 files in other folders)
